--- a/build.gradle
+++ b/build.gradle
@@ -70,6 +70,10 @@ jar {
     }
 }
 
+loom {
+    accessWidenerPath = file("src/main/resources/gateways.accesswidener")
+}
+
 // configure the maven publication
 publishing {
     publications {
