--- a/gradle.properties
+++ b/gradle.properties
@@ -12,3 +12,4 @@ archives_base_name=Gateways
 # Dependencies
 # check this on https://modmuss50.me/fabric.html
 fabric_version=0.114.0+1.21.1
+veil_version=1.0.0.125
