--- a/build.gradle
+++ b/build.gradle
@@ -29,10 +29,11 @@ dependencies {
     mappings "net.fabricmc:yarn:${project.yarn_mappings}:v2"
     modImplementation "net.fabricmc:fabric-loader:${project.loader_version}"
 
-//    modImplementation("foundry.veil:veil-fabric-${project.minecraft_version}:${project.veil_version}") {
-//        exclude group: "maven.modrinth"
-//    }
-    
+    modImplementation("foundry.veil:veil-fabric-${project.minecraft_version}:${project.veil_version}") {
+        exclude group: "maven.modrinth"
+    }
+    include("foundry.veil:veil-fabric-${project.minecraft_version}:${project.veil_version}")
+
     modImplementation "net.fabricmc.fabric-api:fabric-api:${project.fabric_version}"
 }
 
